corrected the spacing on the cards for all screen sizes

--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,14 @@ body{
     color: red;
 } 
 
+.cardCenter {
+  display: flex;
+  justify-content: center;
+  align-items:  flex-start; 
+}
 .card {
     height: auto;
+    
   }
   .card .card-content {
     height: auto;
@@ -69,7 +75,7 @@ body{
     position: relative;
   }
 
-/* .card{
+ /* .card{
     cursor: pointer;
     width: 640px;
     height: 340px;
@@ -77,7 +83,7 @@ body{
     top: 50%;
     left: 50%;
     margin: 2% 0 2% -300px;
-  }
+  }  */
 
   .front,.back{
     width: 100%;
@@ -126,7 +132,7 @@ body{
   }
   .card:hover > .back{
     transform: perspective(600px) rotateY(0deg);
-  } */
+  } 
 
   ul {
       display: flex;
@@ -195,7 +201,20 @@ body{
   ul li:nth-child(3) a:before {
     background: #239ab9;
   }
+
   
+.smallScreen {
+  display: none;
+}
+
+@media (max-width: 1000px){
+  .smallScreen {
+    display: show;
+  }
+  .largeScreen {
+    display: none ;
+  }
+} 
 
 
 @media (max-width: 500px)
